# audio-ai

./: .gitignore  README.md  inference.py  pyproject.toml  train.py  urbansound-dataset.py  urbansounddataset.py
01 nn-basics/: inference_MNIST.py
02 urbansound-classifier/: cnn.py  cnnnet.pth  inference.py  train.py  urbansounddataset.py
03 melody-generator/: preprocess.py
03_melody-generator/: magyar_dataset_001  mapping.json  melody_generator.py  midiget.py  preprocess.py  train.py
04_driveby-counter/: drivebydataset.py  load_driveby_sounds.py
nn-basics/: feedforwardnet.pth  inference_MNIST.py  train_MNIST.py
notebooks/: audio-feature-extraction.ipynb
