[tool.poetry]
name = "audio-ai"
version = "0.1.0"
description = ""
authors = ["Kevin Weingarten <weingarten.kevin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torchaudio = "0.12.1"
torchvision = "0.13.1"
pandas = "^1.5.2"



[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
